# GoldenShell

./: .gitignore  Dockerfile  README.md  install.bat  install.sh  pyproject.toml
goldenshell/: __init__.py  __main__.py  cli.py
goldenshell/core/: compressor.py  crypto.py  engine.py  packer.py
phantom/: __init__.py  __main__.py  banner.py  cli.py
phantom/core/: __init__.py  compressor.py  crypto.py  engine.py  packer.py  steg_protocol.py
tests/: test_full_suite.py
