[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-steg"
version = "1.0.0"
description = "Hide files inside other files - Steganography & Polyglot CLI Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Phantom Team"},
]
keywords = ["steganography", "polyglot", "security", "CLI", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
phantom = "phantom.cli:app"

[tool.setuptools.packages.find]
include = ["phantom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
